:sparkles: Add Gradle/Maven Build Compat
This compatibility commit add all required sripts and configuration files
necessary to build the web site files using either Gradle or Maven.

To use Gradle/Maven for building, the original java file path, now using
"./src/com/", need to be converted to "./src/main/java/". The included
Bash script does this, and also updates the classpath where needed.

Change source paths:
./ecl2mvn.sh

Then to build the web-site with:
gradle compileGwt
gradle makeSite

* Updated .gitignore
* Added build.gradle
* Added ecl2mvn.sh
* Added pom.xml

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
-#GWT cache
-gwt-unitCache/
-war/circuitjs1/
-war/circuitjs1/circuits/
-war/WEB-INF/
+#======================================
+# OS Specific Files
+#======================================
+
+#----------------------------
+# Windows
+#----------------------------
 
 # Windows image file caches
 Thumbs.db
@@ -23,13 +25,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
+#----------------------------
+# MacOS/OSX
+#----------------------------
 .DS_Store
 .AppleDouble
 .LSOverride
@@ -47,3 +45,42 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+
+#----------------------------
+# Linux
+#----------------------------
+
+
+#======================================
+# Project Specific Files
+#======================================
+
+#----------------------------
+# GWT cache
+#----------------------------
+gwt-unitCache/
+war/circuitjs1/
+war/circuitjs1/circuits/
+war/WEB-INF/
+
+#----------------------------
+# Eclipse
+#----------------------------
+
+
+#----------------------------
+# For Maven builds
+#----------------------------
+target/
+
+#----------------------------
+# For Gradle builds
+#----------------------------
+.gradle/
+gradle/
+build/
+site/
+
+settings.gradle
+gradlew
+gradlew.bat
